syntax ="proto3";
package genproto;
option go_package ="genproto/position_service";

service ProfessionServise {
    rpc Create(CreateProfession) returns (ProfessionId){}
    rpc GetAll(GetAllProfessionRequest) returns (GetAllProfessionResponse){}
    rpc GetById(ProfessionId) returns (Profession){}
    rpc Update(Profession) returns (Profession){}
    rpc Delete(ProfessionId) returns (AffectedRows){}

}

message Profession {
    string id = 1;
    string name = 2;
    string created_at =3;
    string updated_at =4;    
}

message CreateProfession{
    string name = 1;
}

message ProfessionId {
    string id = 1;
}

message GetAllProfessionRequest {
    int64 offset = 1;
    int64 limit = 2;
    string name = 3;
}

message GetAllProfessionResponse {
    repeated Profession professions = 1;
    int32 count = 2;
}

message AffectedRows {
    int32 number = 1;
}
message MsgResponse {
    string Msg =1 ;
}